<resources>
    <string name="app_name">Mapa Interactivo</string>
    <string name="nombre_completo">Nombre completo</string>
    <string name="alumno">Alumno</string>
    <string name="profesor">Profesor</string>
    <string name="matr_cula">Matrícula</string>
    <string name="usuario">Usuario</string>
    <string name="registrarse">Registrarse</string>
    <string name="contrase_a">Contraseña</string>
    <string name="registro">Registro</string>
    <string name="title_activity_menu">Menu</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Map</string>
    <string name="descripci_n">Descripción</string>
    <string name="nombre_edificio">Nombre edificio</string>
    <string name="ver_fotos">Ver fotos</string>
    <string name="nombre_evento">Nombre del evento</string>
    <string name="fecha_fin">Fecha Fin</string>
    <string name="fecha_inicio">Fecha Inicio</string>
    <string name="nuevo_evento">Nuevo evento</string>
    <string name="aceptar">Aceptar</string>
    <string name="cancelar">Cancelar</string>
    <string name="descripcion_del_evento">Descripción del evento</string>
</resources>
